    44- mfshimura: disallow the discriminant D argument, only allow
        squarefree positive t
BA  45- closures: do not copy the full context, only the accessible part
    46- add optional argument to randomprime [select congruence class]
    47- add optional argument to sqrtint [set remainder]  [#2229]
    48- gammamellininv*(A,...): allow A to be an L-function
    49- bnrinit: optional argument to compute Cl_f/n, avoids tough discrete logs
    50- rnfkummer: removed "all" flag, function now obsolete. Use bnrclassfield!
    51- rnfconductor: flag to compute Cl_f/[K:Q] instead of Cl_f
    52- bnrconductor_i is now obsolete, use bnrconductor_raw or bnrconductormod
    53- dvdxxx(x,y) allow y = 0 [and return 0 unless x = 0]
    54- [libpari] bnrsurjection now returns [matrix, cyc(F), cyc(f)]

  Added
     1- new GP function rootsof1
BA   2- [libpari] F2xqX_halfgcd, FFX_halfgcd
     3- [libpari] uis2psp, uispsp
     4- [libpari] ZV_lcm
     5- [libpari] nfhyperellpadicfrobenius
     6- [libpari] rnf_get_ramified_primes
     7- allow nfinit([T, basis, ramified primes])
     8- allow nf.p, rnf.p [rational ramified primes]
     9- [libpari] idealfactor_partial
    10- add flag bit to ZM_snfall_i
    11- allow real t_QUAD in floor, ceil, divrem, %, \, \/
    12- [libpari] ff_parse_Tp
    13- new GP function mfisetaquo
    14- [libpari] Qab_tracerel, QabV_tracerel, QabM_tracerel
BA  15- [libpari] RgXV_to_FlxV, FlxV_Flv_multieval,
                  F2v_and_inplace, F2v_negimply_inplace, F2v_or_inplace,
                  F2v_hamming
    16- [libpari] ZpX_primedec
BA  17- [libpari] QM_sqr, FqC_to_mod, ZXQX_gcd, QXQX_gcd
    18- [libpari] radicalu
    19- parallel support for lfuninit
    20- new GP function parplothexport
BA  21- [libpari] gen_ZpM_Newton, ZpM_invlift
BA  22- [libpari] F2xn_red, F2xn_inv, F2xX_to_F2xC, F2xXV_to_F2xM
HC  23- direct formulas for quadratic Dirichlet L-functions at integers
    24- new GP functions: eulerfrac, eulerpol, eulervec