@@ -1,25 +1,31 @@
 Function: idealstar
 Section: number_fields
-C-Name: idealstar0
-Prototype: DGGD1,L,
-Help: idealstar({nf},N,{flag=1}): gives the structure of (Z_K/N)^*, where N is
+C-Name: idealstarmod
+Prototype: DGGD1,L,DG
+Help: idealstar({nf},N,{flag=1},{cycmod}): gives the structure of (Z_K/N)^*,
+ where N is
  a modulus (an ideal in any form or a vector [f0, foo], where f0 is an ideal
- and foo is a {0,1}-vector with r1 components. flag is
- optional, and can be 0: simply gives the structure as an abelian group, i.e.
- a 3-component vector [h,d,g] where h is the order, d the orders of the cyclic
- factors and g the generators;
- if flag=1 (default), gives a bid structure used in ideallog
- to compute discrete logarithms; underlying generators are well-defined but not
- explicitly computed, which saves time; if flag=2, same as with flag=1 except
- that the generators are also given.
- If nf is omitted, N must be an integer and
- we return the structure of (Z/NZ)^*.
+ and foo is a {0,1}-vector with r1 components.
+ If the positive integer cycmod is present,  only compute the group
+ modulo cycmod-th powers. flag is optional, and can be 0: structure as an
+ abelian group [h,d,g] where h is the order, d the orders of the cyclic
+ factors and g the generators; if flag=1 (default), gives a bid structure used
+ in ideallog to compute discrete logarithms; underlying generators are
+ well-defined but not explicitly computed, which saves time; if flag=2,
+ same as with flag=1 except that the generators are also given.
+ If nf is omitted, N must be an integer and we return the structure of (Z/NZ)^*.
 Doc: outputs a \kbd{bid} structure,
  necessary for computing in the finite abelian group $G = (\Z_K/N)^*$. Here,
  \var{nf} is a number field and $N$ is a \var{modulus}: either an ideal in any
  form, or a row vector whose first component is an ideal and whose second
  component is a row vector of $r_1$ 0 or 1. Ideals can also be given
  by a factorization into prime ideals, as produced by \tet{idealfactor}.
+
+ If the positive integer \kbd{cycmod} is present,  only compute the group
+ modulo \kbd{cycmod}-th powers,  which may save a lot of time when some
+ maximal ideals in the modulus have a huge residue field. Whereas you might
+ only be intersted in quadratic or cubic residuosity; see also \kbd{bnrinit}
+ for applications in class field theory.
 
  This \var{bid} is used in \tet{ideallog} to compute discrete logarithms. It
  also contains useful information which can be conveniently retrieved as
