@@ -74,9 +74,9 @@
 1
 1
 0.99595931395311210936063384855913482215 - 0.0898055953159170744883890303595
-05357516*I
-0.089805595315917074488389030359505357521 - 0.995959313953112109360633848559
-13482212*I
+05357518*I
+0.089805595315917074488389030359505357526 - 0.995959313953112109360633848559
+13482210*I
 1
 1
 0.99595931395311210936063384855913482215 + 0.0898055953159170744883890303595
@@ -101,4 +101,4 @@
   ***   at top-level: bnrisprincipal(bnrinit(bnf,1),1)
   ***                 ^--------------------------------
   *** bnrisprincipal: missing bnr generators: please use bnrinit(,,1).
-Total time spent: 339
+Total time spent: 362
