@@ -226,10 +226,18 @@ x^8 - 2*x^7 + Mod(-2*y^2 - 4*y - 27, y^3 + 14*y - 1)*x^6 + Mod(2*y^2 + 6*y +
 tough discrete log
 [x^3 + 1220909029402133157056664768993*x + 228173780956868462063268259363773
 647292715351*a]
+tough factorization for structure of k(pr)^*
+[x^3 - 124605152776383880390723164330780836681247395669702932114626903273810
+0335653842887163737345746603468166565713887746845621352923776537140672180761
+81167534459523573834583687437400009382330108311817598283*x + 377143528906672
+9356539838692927482115948230537325657974061964131050584561046525436227324582
+0622952576483473221925056061538198425966101542406349670238672049800945490332
+6355918086715061533824316389015991356954063061961914858980761767635379232210
+677361394668132952855129411876734922669237206671971928041]
 vector of subgroups
 [[x^3 - 48*x + y], [x^3 + 24*x + 295], [x^3 + 6*x + y]]
 [x^3 - 48*x + y, x^3 + 24*x + 295, x^3 + 6*x + y]
-[x^6 - 96*x^4 + 2304*x^2 + 3299, x^6 + 9945*x^4 + 590*x^3 + 32650779*x^2 - 5
+[x^6 - 96*x^4 + 2304*x^2 + 3299, x^6 + 9945*x^4 - 590*x^3 + 32650779*x^2 + 5
 825070*x + 35383923900, x^6 + 12*x^4 + 36*x^2 + 3299]
 []
 [[x^3 + 3*x - y]]
@@ -267,4 +275,4 @@ bad inputs
   ***   at top-level: bnrclassfield(bnfinit(x))
   ***                 ^-------------------------
   *** bnrclassfield: incorrect priority in bnrclassfield: variable x = x
-Total time spent: 4659
+Total time spent: 4696
